# navigation-agent

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DEVELOPMENT_PLAN.md  PLAN_PHASE1.md  PLAN_PHASE2.md  WEB_UI.md
scripts/: demo.py  web_ui.py
src/: __init__.py
src/agent/: __init__.py  memory.py  navigator.py
src/env/: __init__.py  gridworld.py
src/tools/: __init__.py  navigation_tools.py
src/utils/: __init__.py  viz.py
tests/: test_agent.py  test_env.py
