[project]
name = "navigation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.13.0",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pydantic>=2.13.3",
]
